[tool.poetry]
name = "oysterpack-smart-algorand"
version = "0.1.0"
description = ""
authors = ["oysterpack.inc <2zP6OaymGZhJTHFvQMzp6Ze>"]
readme = "README.md"
packages = [{include = "oysterpack"}]

[tool.poetry.dependencies]
python = "^3.11"
beaker-pyteal = "^1.0.0"
algokit-utils = "^1.0.1"
python-ulid = "^1.1.0"
websockets = "^11.0.2"
uvloop = "^0.17.0"
password-validator = "^1.0"
click = "^8.1.3"
click-shell = "^2.1"

[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "*"}
ruff = "*"
mypy = "*"
pip-audit = "*"
coverage = "*"
msgpack-types = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "ANN", "UP", "N", "C4", "B", "A", "YTT", "W", "FBT", "Q", "RUF", "I"]
ignore = [
  "ANN101", # no type for self
  "ANN102", # no type for cls
]
unfixable = ["B", "RUF"]
line-length = 120

[tool.ruff.flake8-annotations]
allow-star-arg-any = true
suppress-none-returning = true

[tool.mypy]
files = "smart_contracts/"
python_version = "3.10"
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
allow_untyped_defs = false
strict_equality = true
